--- a/HTML/10 - Desafio.html
+++ b/HTML/10 - Desafio.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 
-    <h1>Olá, Eu sou o Danilo Leite</h1>
-    <h3>Quem sou eu?</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere dolores et dolore temporibus, esse nisi laboriosam ipsum dignissimos natus repudiandae quo doloribus obcaecati dolor sequi veritatis nemo in? Blanditiis, iste!</p>
+    <div class="Introducao">
+        <h1>Olá, Eu sou o Danilo Leite</h1>
+        <h2>Quem sou eu?</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere dolores et dolore temporibus, esse nisi laboriosam ipsum dignissimos natus repudiandae quo doloribus obcaecati dolor sequi veritatis nemo in? Blanditiis, iste!</p>
+    </div>
 
     <div class="metas">
         <h4>Minhas metas para esse ano:</h4>
@@ -20,9 +22,11 @@
             <li>Trabalhar</li>
         </ul>
     </div>
+
     <div class="MeuSite">
         <a href="https://www.linkedin.com/in/danilo-leite-ba75b8183/" target="_blank">Meu linkedin</a>
     </div>
+
     <div class="indicacao">
         <h4>Pessoas que eu gostaria que estivesse no DEVCLUB</h4>
         <ol>
@@ -31,9 +35,11 @@
             <li>Jonathan</li>
         </ol>
     </div>
+
     <div class="fotominha">
         <img src="Danilo Leite 3.jpg" alt="FotoDanilo" height="200px">
        
     </div>
+
 </body>
 </html>
