Finalizando conhecimentos em HTML

--- a/HTML/10 - Desafio.html
+++ b/HTML/10 - Desafio.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danilo Leite</title>
 </head>
+
 <body>
 
     <div class="Introducao">
         <h1>Olá, Eu sou o Danilo Leite</h1>
         <h2>Quem sou eu?</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere dolores et dolore temporibus, esse nisi laboriosam ipsum dignissimos natus repudiandae quo doloribus obcaecati dolor sequi veritatis nemo in? Blanditiis, iste!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere dolores et dolore temporibus, esse nisi
+            laboriosam ipsum dignissimos natus repudiandae quo doloribus obcaecati dolor sequi veritatis nemo in?
+            Blanditiis, iste!
+        </p>
     </div>
 
     <div class="metas">
@@ -38,8 +43,10 @@
 
     <div class="fotominha">
         <img src="Danilo Leite 3.jpg" alt="FotoDanilo" height="200px">
-       
+
     </div>
 
 </body>
+
+
 </html>
