finalização do projeto 01

--- a/CSS/projeto01/index.html
+++ b/CSS/projeto01/index.html
@@ -19,22 +19,23 @@
 
 <body>
     <header>
-        <a class="link-header" href="#">Home</a>
-        <a class="link-header" href="#">About</a>
-        <a class="link-header" href="#">Product</a>
-        <a class="link-header" href="#">Service</a>
-        <a class="link-header" href="#">Contact</a>
+        <a class="link-header">Home</a>
+        <a class="link-header">About</a>
+        <a class="link-header">Product</a>
+        <a class="link-header">Service</a>
+        <a class="link-header">Contact</a>
         <button class="button-header" >LOG IN</button>
     </header>
     <main>
         <img src="img/we-care.png" alt="we-care-logo" class="logo-image">
-        <h1>We Care</h1>
-        <h2>About your pet</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eaque, expedita adipisci inventore ipsa
-            deleniti
-            iusto, repellat esse recusandae possimasperiores officia, quia repellendMagni eligendi quaerat iure quam
-            culpa!</p>
-        <button>Explore</button>
+        <section>
+            <h1>We Care</h1>
+            <h2>About your pet</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eaque, expedita adipisci inventore ipsa
+                iusto, repellat esse recusandae possimasperiores officia, quia repellendMagni eligendi quaerat iure quam
+                culpa!</p>
+            <button class="button-main">Explore</button>
+        </section>
     </main>
 
 </body>
