--- a/CSS/Desafio1/index.html
+++ b/CSS/Desafio1/index.html
@@ -18,7 +18,7 @@
         <button class="button-header">Sign up</button>
     </nav>
     <main>
-        <img class="img-logo" src="img/wide-coverage.png" alt="logo-site">
+        <img src="img/wide-coverage.png" alt="logo-site">
         <section>
             <h1>Wide coverage location</h1>
             
