--- a/CSS/position/index.html
+++ b/CSS/position/index.html
@@ -13,8 +13,12 @@
             ABSOLUTE
         </div>
     </section>
-    <article></article>
-    <footer></footer>
+    <article>RELATIVE
+        <div class="sticky">
+            STICKY
+        </div>
+    </article>
+    <footer>RELATIVE</footer>
     
 </body>
 </html>
