--- a/Convert Money/index.html
+++ b/Convert Money/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./index.css">
 
     <title>Convert Money</title>
 </head>
@@ -21,7 +22,7 @@
         </header>
         <main>
             <label>
-                Converte de
+                Converte <b>de</b>
                 <select>
                     <option>
                         R$ Real Brasileiro
@@ -29,7 +30,7 @@
                 </select>
             </label>
             <label>
-                Converte de
+                Converte <b>para</b>
                 <select>
                     <option>
                         US$ Dolar Americano
