--- a/Convert Money/index.html
+++ b/Convert Money/index.html
@@ -49,18 +49,18 @@
             <button type="button">Converter</button>
 
             <section>
-                <div>
+                <div class="currency-container">
                     <img src="./assets/brasil .png" alt="Brasil">
-                    <p>Real</p>
-                    <p>R$ 10.000,00</p>
+                    <p class="currency-name">Real</p>
+                    <p class="currency-value">R$ 10.000,00</p>
                 </div>
 
-                <img src="./assets/Vector.png" alt="">
+                <img class="arrow-img" src="./assets/Vector.png" alt="">
 
-                <div>
+                <div class="currency-container">
                     <img src="./assets/estados-unidos .png" alt="Dolar">
-                    <p>Dolár Americano</p>
-                    <p> US$ 2.000,00</p>
+                    <p class="currency-name">Dolár Americano</p>
+                    <p class="currency-value"> US$ 2.000,00</p>
                 </div>
             </section>
 
