--- a/BackGroundColor/index.html
+++ b/BackGroundColor/index.html
@@ -9,8 +9,11 @@
 <body>
 
     <button id="Clique">Modo Noturno</button>
+
+    <div id="quadrado"></div>
     
 </body>
 <script src="./index.js">
 </script>
 </html>
+
