--- a/BackGroundColor/index.html
+++ b/BackGroundColor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Trocando com fundo com JS</title>
+    <title>Trocando cor de fundo com JS</title>
 </head>
 <body>
 
